# hudhub

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml  test_ci.yml
docs/: Notes.md  huds_sources
hudhub/: Cargo.toml
hudhub-core/: Cargo.toml
hudhub-core/src/: deployment.rs  lib.rs  package.rs  registry.rs  source.rs
hudhub/src/: commands.rs  main.rs  paths.rs  state.rs  ui.rs
hudhub/src/ui/: add_view.rs  list_view.rs  mod.rs
src/: archive.rs  main.rs  state.rs  ui.rs
src/huds/: archive_location.rs  hud.rs  mod.rs
