[package]
name = "tf2-huds-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.23", features = ["serde"] }
iced = { version = "0.8.0", features = ["tokio"] }
iced_aw = { version = "0.4.1", default-features = false, features = ["modal"] }
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
tempdir = "0.3.7"
test-case = "3.0.0"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["macros", "fs"] }
zip = "0.6.4"
platform-dirs = "0.3.0"
steamlocate = "1.1.1"
