[package]
name = "hudhub-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
enum-as-inner = "0.5.1"
fs_extra = "1.3.0"
nom = "7.1.3"
reqwest = "0.11.14"
tempdir = "0.3.7"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["fs", "macros"] }
zip = "0.6.4"

[dev-dependencies]
test-case = "3.0.0"
